--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="../style.css" rel="stylesheet">
 <script>
-  Talk.ready.then(function() {  
+  Talk.ready.then(function() {
       var me = new Talk.User({
           id: "123456",
           name: "Alice",
@@ -62,7 +62,7 @@
           <li><a href="chatroulette.html">Chat Roulette</a></li>
           <li><a href="Connections.html">Connections</a></li>
           <li><a href="individualchat.html">Individual Chat</a></li>
-          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportpage.html">Support</a></li>
           <li><a href="settings.html">Settings</a></li>
         </ul>
       </div>
