Small Change To Navbar to match with others

--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -31,7 +31,7 @@
           <li><a href="chatroulette.html">Chat Roulette</a></li>
           <li><a href="Connections.html">Connections</a></li>
           <li><a href="individualchat.html">Individual Chat</a></li>
-          <li><a href="supportpage.html">Support Page</a></li>
+          <li><a href="supportpage.html">Support</a></li>
           <li><a href="settings.html">Settings</a></li>
         </ul>
       </div>
