--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -9,34 +9,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="../style.css" rel="stylesheet">
 <script>
-  Talk.ready.then(function() {
-      var me = new Talk.User({
-          id: "123456",
-          name: "Alice",
-          email: "alice@example.com",
-          photoUrl: "https://demo.talkjs.com/img/alice.jpg",
-          welcomeMessage: "Hey there! How are you? :-)"
-      });
-      window.talkSession = new Talk.Session({
-          appId: "tV6gHbbq",
-          me: me
-      });
-      var other = new Talk.User({
-          id: "654321",
-          name: "Sebastian",
-          email: "Sebastian@example.com",
-          photoUrl: "https://demo.talkjs.com/img/sebastian.jpg",
-          welcomeMessage: "Hey, how can I help?"
-      });
-
-      var conversation = talkSession.getOrCreateConversation(Talk.oneOnOneId(me, other))
-      conversation.setParticipant(me);
-      conversation.setParticipant(other);
-
-      var inbox = talkSession.createInbox({selected: conversation});
-      inbox.mount(document.getElementById("talkjs-container"));
-  });
-  </script>
+(function(t,a,l,k,j,s){
+s=a.createElement('script');s.async=1;s.src="https://cdn.talkjs.com/talk.js";a.head.appendChild(s)
+;k=t.Promise;t.Talk={v:3,ready:{then:function(f){if(k)return new k(function(r,e){l.push([f,r,e])});l
+.push([f])},catch:function(){return k&&new k()},c:l}};})(window,document,[]);
+</script>
   <script src="../script.js"></script>
   <style>
     /* Set black background color, white text and some padding */
