--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -34,8 +34,9 @@
     </div>
   </nav>
   <!-- Header -->
-  <header class="bg-primary py-5 mb-5">
-    <img id="homepagebanner" src="../Imgs/bg.jpg" alt="Background">
+  <header>
+      <img id="homepagebanner" src="../Imgs/bg.jpg" alt="Background">
+      <img id="homepagebanner" src="../Imgs/bg2.jpg" alt="Background">
   </header>
   <!-- Page Content -->
   <div class="container">
@@ -47,7 +48,7 @@
         <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine!</p>
       </div>
       <div class="col-md-4 mb-5">
-        <h2>Contact Us</h2>
+        <h4>Contact Us</h4>
         <hr>
         <address>
           <strong>CovidConnect</strong>
@@ -72,7 +73,7 @@
           <img class="card-img-top" src="../Imgs/chat.png" alt="Chat Logo">
           <div class="card-body">
             <h4 class="card-title">Chat!</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
+            <p class="card-text">Chat with your connections. Dont be alone throughout isolation!</p>
           </div>
           <div class="card-footer">
             <a href="individualchat.html" class="btn btn-primary">Start Now!</a>
@@ -84,7 +85,7 @@
           <img class="card-img-top" src="../Imgs/chatroulette.png" alt="chatroulette Logo">
           <div class="card-body">
             <h4 class="card-title">Chat Roulette!</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
+            <p class="card-text">Chat with random people and make new friendships.</p>
           </div>
           <div class="card-footer">
             <a href="chatroulette.html" class="btn btn-primary">Start Now!</a>
@@ -96,7 +97,7 @@
           <img class="card-img-top" src="../Imgs/connect.png" alt="Chat Logo">
           <div class="card-body">
             <h4 class="card-title">Connect Now</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">Connect with new people in your area. Make new friends and allow for your friendships to expand now and beyond covid 19</p>
           </div>
           <div class="card-footer">
             <a href="connections.html" class="btn btn-primary">Start Now!</a>
@@ -104,9 +105,8 @@
         </div>
       </div>
     </div>
-    <!-- /.row -->
+    <!-- row -->
   </div>
-  <!-- /.container -->
   <!-- Footer -->
   <footer class="container-fluid text-center">
     <p>Covid Connect Footer</p>
