--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 
-<body onload="displaySettings()" style="background-image: url('../bgsettings.png');">
+<body onload="displaySettings()">
   <!-- Navigation -->
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -51,13 +51,19 @@
         </h5>
         <br>
       </div>
-      <div class="settingscontainer">
+      <div class="settingscontainer1">
         <h4>Other Information</h4>
         <hr>
         <h5>Date of Birth: <input type="text" class="input" value="20th April 1999"></h5>
         <h5>Gender:
           <input type="radio" name="gender" value="male"> Male
           <input type="radio" name="gender" value="female"> Female
+          <br>
+          <label for="w3review">Personal Bio:</label>
+          <br>
+          <textarea id="w3review" name="w3review" rows="4" cols="50">
+            Please enter a few sentences about yourself.
+          </textarea>
         </h5>
         <br>
       </div>
