--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -46,9 +46,8 @@
         <h5>Username: <input type="text" id="username" class="input"></h5>
         <h5>Full Name: <input type="text" id="fullName" class="input"></h5>
         <h5>Email: <input type="text" id="email" class="input"></h5>
-        <h5>
-          <form action="upload.php" method="post">Profile Picture:<input type="file" name="file" id="file" /></form>
-        </h5>
+        <h5>Upload profile image: </h5>
+          <input type="file" name="file" id="file">        
         <br>
       </div>
       <div class="settingscontainer">
