--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -95,11 +95,11 @@
         <div class="card h-100">
           <img class="card-img-top" src="../Imgs/connect.png" alt="Chat Logo">
           <div class="card-body">
-            <h4 class="card-title">Connect Now</h4>
-            <p class="card-text">Connect with new people in your area. Make new friends and allow for your friendships to expand now and beyond covid 19</p>
+            <h4 class="card-title">Profile</h4>
+            <p class="card-text">View, update or edit your profile.</p>
           </div>
           <div class="card-footer">
-            <a href="connections.html" class="btn btn-primary">Start Now!</a>
+            <a href="profile.html" class="btn btn-primary">Start Now!</a>
           </div>
         </div>
       </div>
