test chat 8 if this works I'll be annoyed at myself

--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -23,7 +23,7 @@ Talk.ready.then(function() {
         welcomeMessage: "Hey there! How are you? :-)"
     });
     window.talkSession = new Talk.Session({
-        appId: "YOUR_APP_ID",
+        appId: "tV6gHbbq",
         me: me
     });
     var other = new Talk.User({
