--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -34,8 +34,7 @@
   </nav>
   <!-- Header -->
   <header>
-      <img id="homepagebanner" src="../Imgs/bg.jpg" alt="Background">
-      <img id="homepagebanner" src="../Imgs/bg2.jpg" alt="Background">
+    <img id="homepagebanner" src="../Imgs/bg1.jpg" alt="Background">
   </header>
   <!-- Page Content -->
   <div class="container">
@@ -44,13 +43,12 @@
         <h1 id="usernameDis">Welcome </h1>
         <h2>What is Covid Connect?</h2>
         <hr>
-        <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine!</p>
+        <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine! You can use our ChatRoulette feature to meet new people and connect to them if you enjoyed the conversation.</p>
       </div>
       <div class="col-md-4 mb-5">
         <h4>Contact Us</h4>
-        <hr>
         <address>
-          <strong>CovidConnect</strong>
+          Covid Connect
           <br>Mayor Street Lower
           <br>IFSC
           <br>Dublin
@@ -58,7 +56,7 @@
         </address>
         <address>
           <abbr title="Phone">P:</abbr>
-          (086) 216 3521
+          <a href="tel:(086) 216 3521">(086) 216 3521</a>
           <br>
           <abbr title="Email">E:</abbr>
           <a href="mailto:#">covidconnect@covidconnect.com</a>
