--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -41,13 +41,12 @@
     <div class="row">
       <h1 id="usernameDis">Welcome </h1>
       <div class="col-md-8 mb-5">
-
-        <h2>What is Covid Connect?</h2>
+        <h3><strong>What is Covid Connect?</strong></h3>
         <hr>
         <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine! You can use our ChatRoulette feature to meet new people and connect to them if you enjoyed the conversation.</p>
       </div>
       <div class="col-md-4 mb-5">
-        <h4>Contact Us</h4>
+        <h3><strong>Contact Us</strong></h3>
         <address>
           Covid Connect
           <br>Mayor Street Lower
@@ -65,8 +64,8 @@
       </div>
     </div>
     <!-- /.row -->
-    <div class="row">
-      <div class="col-md-4 mb-5">
+    <div class="row" style="display:flex; justify-content:space-between;">
+      <div class="homerow">
         <div class="card h-100">
           <img class="card-img-top" src="../Imgs/chat.png" alt="Chat Logo">
           <div class="card-body">
@@ -74,11 +73,11 @@
             <p class="card-text">Chat with your connections. Dont be alone throughout isolation!</p>
           </div>
           <div class="card-footer">
-            <a href="individualchat.html" class="btn btn-primary">Start Now!</a>
+            <a href="individualchat.html" class="btn btn-primary">Go!</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4 mb-5">
+      <div class="homerow">
         <div class="card h-100">
           <img class="card-img-top" src="../Imgs/chatroulette.png" alt="chatroulette Logo">
           <div class="card-body">
@@ -86,19 +85,19 @@
             <p class="card-text">Chat with random people and make new friendships.</p>
           </div>
           <div class="card-footer">
-            <a href="chatroulette.html" class="btn btn-primary">Start Now!</a>
+            <a href="chatroulette.html" class="btn btn-primary">Go!</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4 mb-5">
+      <div class="homerow">
         <div class="card h-100">
           <img class="card-img-top" src="../Imgs/connect.png" alt="Chat Logo">
           <div class="card-body">
-            <h4 class="card-title">Profile</h4>
-            <p class="card-text">View, update or edit your profile.</p>
+            <h4 class="card-title">Profile!</h4>
+            <p class="card-text">Have a look at your profile. You can View, update or edit it.</p>
           </div>
           <div class="card-footer">
-            <a href="profile.html" class="btn btn-primary">Start Now!</a>
+            <a href="profile.html" class="btn btn-primary">Go!</a>
           </div>
         </div>
       </div>
