--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -36,6 +36,9 @@
       </div>
     </div>
   </nav>
+  <header>
+    <img id="homepagebanner" src="../Imgs/bgsettings.jpg" alt="Background">
+  </header>
   <div class="container-fluid">
     <div class="row content" style="text-align:center;">
       <h3>Account Settings</h3>
@@ -75,7 +78,7 @@
         <br>
         <button class="btn">Update</button>
       </div>
-      <div class="settingscontainer">
+      <div class="settingscontainer2">
         <h4>Account Deletion</h4>
         <hr>
         <h4>Deleting your account is permanent. This account cannot be undone.</h4>
