banners for all pages

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -30,6 +30,11 @@
     </div>
   </div>
 </nav>
+<!-- Header -->
+<header>
+  <img id="homepagebanner" src="../Imgs/bgsupport.jpg" alt="Background">
+</header>
+<!-- Page Content -->
   <div class="container-fluid text-center">
         <h1>Support Page</h1>
         <hr>
