--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -30,6 +30,11 @@
       </div>
     </div>
   </nav>
+  <!-- Header -->
+  <header>
+    <img id="homepagebanner" src="../Imgs/profile.jpg" alt="Background">
+  </header>
+  <!-- Page Content -->
   <div class="container-fluid text-center">
     <div class="row content">
       <div class="col-md-4">
