--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -30,6 +30,11 @@
       </div>
     </div>
   </nav>
+  <!-- Header -->
+  <header>
+    <img id="homepagebanner" src="../Imgs/bgchatroulette.jpg" alt="Background">
+  </header>
+  <!-- Page Content -->
   <div class="container-fluid text-center">
     <div class="row content">
       <div class="col-sm-2 sidenav">
