--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -72,7 +72,11 @@ Talk.ready.then(function() {
       </div>
     </div>
   </nav>
-
+  <!-- Header -->
+  <header>
+    <img id="homepagebanner" src="../Imgs/bgchat.jpg" alt="Background">
+  </header>
+  <!-- Page Content -->
   <div class="container text-center">
     <div class="row">
       <div class="col-sm-3 well">
