--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -32,7 +32,7 @@
   </nav>
   <!-- Header -->
   <header>
-    <img id="homepagebanner" src="../Imgs/profile.jpg" alt="Background">
+    <img id="homepagebanner" src="../Imgs/bgprofile.jpg" alt="Background">
   </header>
   <!-- Page Content -->
   <div class="container-fluid text-center">
