--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -37,45 +37,20 @@
   <!-- Page Content -->
   <div class="container-fluid text-center">
     <div class="row content">
-      <div class="col-sm-2 sidenav">
-        <h2>Online Connections</h2>
-        <p><a href="#">Tegan Jennings</a></p>
-        <p><a href="#">Emanuel Ivan</a></p>
-        <p><a href="#">Luke Kavanagh</a></p>
-        <p><a href="#">Oisin Hogan</a></p>
-        <p><a href="#">Sean Hallahan</a></p>
-        <p><a href="#">Michael Murphy</a></p>
-        <p><a href="#">Karen O'Brien</a></p>
-        <p><a href="#">James Deegan</a></p>
-        <p><a href="#">Ava Hannagan</a></p>
-        <p><a href="#">Damon Salvatore</a></p>
-        <p><a href="#">Klaus Michaelson</a></p>
-
-      </div>
       <div class="col-sm-8 text-left">
         <div id="message-container">
           <form id="send-container">
             <input type="text" id="message-input">
-              <button type="submit" id="send-button">Send</button>
+            <button type="submit" id="send-button">Send</button>
           </form>
-
         </div>
       </div>
+      <button type="submit" id="send-button"><a href="rating.html">Next</a></button>
 
-      <div class="col-sm-2 sidenav">
-        <div class="well">
-          <p><a href="rating.html">Rate your Chat!</a></p>
-        </div>
-        <div class="well">
-          <p><a href="connectionafterchat.html">Connect with this person!</a></p>
-        </div>
-      </div>
     </div>
-  </div>
-
-   <footer class="container-fluid text-center">
-    <p>Covid Connect Footer</p>
-  </footer>
+    <footer class="container-fluid text-center">
+      <p>Covid Connect Footer</p>
+    </footer>
 </body>
 
 </html>
