--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -40,12 +40,12 @@
     <div class="row content">
 
 
-      <div class="well" style="margin-left:1%; width:18%; height:60%; margin-bottom:2%; float:left;">
+      <div class="well" style="margin-left:1%; margin-bottom:2%; float:left;">
         <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
         <h3>You</h3>
       </div>
 
-      <div class="well1" style="margin: 0 auto; width:30%; height:60%; margin-bottom:2%; float:none;">
+      <div class="well1" style="margin: 0 auto; margin-bottom:2%; float:none;">
         <p>Please rate your conversation!</p>
         <form action="">
           <fieldset>
@@ -67,7 +67,7 @@
 
 
 
-      <div class="well" style="margin-right:1%; width:18%; height:60%; margin-bottom:2%; float:right;">
+      <div class="well" style="margin-right:1%; margin-bottom:2%; float:right;">
         <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
         <h3>Other User</h3>
       </div>
