--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -45,7 +45,7 @@
         <h3>You</h3>
       </div>
 
-      <div class="well1" style="margin: 0 auto; margin-bottom:2%; float:none;">
+      <div class="well1" style="margin: 0 auto; margin-bottom:2%; margin-left:13%; float:left;">
         <p>Please rate your conversation!</p>
         <form action="">
           <fieldset>
@@ -67,7 +67,7 @@
 
 
 
-      <div class="well" style="margin-right:1%; margin-bottom:2%; float:right;">
+      <div class="well" style="margin-right:1%; margin-left:13%; margin-bottom:2%; float:left;">
         <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
         <h3>Other User</h3>
       </div>
