--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -38,11 +38,11 @@
   <!--Page content-->
   <div class="container-fluid text-center">
     <div class="row content">
-      <div class="well" style="margin-left:1%; margin-bottom:2%; float:left;">
+      <div class="well" style="margin-left:1%; float:left;">
         <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
         <h3>You</h3>
       </div>
-      <div class="well1" style="margin: 0 auto; margin-bottom:2%; margin-left:14%; float:left;">
+      <div class="well1" style="margin: 0 auto; margin-left:14%; float:left;">
         <p>Please rate your conversation!</p>
         <form action="">
           <fieldset>
@@ -61,7 +61,7 @@
         <br>
         <button type="submit" id="send-button"><a href="chatroulette.html">Next</a></button>
       </div>
-      <div class="well" style="margin-right:1%; margin-left:12%; margin-bottom:2%; float:left;">
+      <div class="well" style="margin-right:1%; margin-left:12%; float:left;">
         <img src="../Imgs/PfpPlaceholder.png" width="80%" height="80%"></img>
         <h3>Other User</h3>
       </div>
