--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -54,11 +54,15 @@
               <input type="radio" name="rating" value="5" aria-label="5 star">
             </div>
           </fieldset>
+        </form><br>
+        <form action="">
+          <label for="connectform">Would you like to Connect with this user?</label>
+          <select id="connectform" name="connectform">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
         </form>
-        <button>Rate</button>
-        <p>Would you like to connect with this user?</p>
-        <button>Connect Now!</button>
-        <br>
+        <br><br>
         <button type="submit" id="send-button"><a href="chatroulette.html">Next</a></button>
       </div>
       <div class="well" style="margin-right:1%; margin-left:12%; float:left;">
