--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -46,11 +46,8 @@
         </div>
       </div>
       <button type="submit" id="send-button"><a href="rating.html">Next</a></button>
-
-    </div>
-    <footer class="container-fluid text-center">
-      <p>Covid Connect Footer</p>
-    </footer>
+      <br><br>
+      <iframe src='http://www.meetingroulette.com/sourcecode/iframe.asp?code=2894661691&codcountry=IE&codstate=&idcity=0&mode=text&color=f2f2f2' width='900' height='570' frameborder='0'></iframe>
 </body>
 
 </html>
