--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -105,8 +105,8 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="../bootstrap/js/bootstrap.min.js"></script>
 
-  <script src="../node_module/socket.io/socket.io.js"></script>
-  <script src="../node_module/easyrtc/easyrtc.js"></script>
+  <script src="../node_module/socket.io/lib/socket.io.js"></script>
+  <script src="../node_module/easyrtc/api/easyrtc.js"></script>
   <script src="../app.js"></script>
 
 
