Added link to settings page from support

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -56,7 +56,7 @@
           </div>
           <div id="midright">
             <div class="side">
-              <p>Settings</p>
+              <p>Settings, Link to Settings Page</p><li><a href="settings.html">Settings</a></li>
             </div>
             <div class="side">
               <p>Your Account</p>
