--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -4,19 +4,18 @@
 <head>
   <title>Chat Roulette Page</title>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Enlargify</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="../style.css" rel="stylesheet">
   <script src="../script.js"></script>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <!-- Bootstrap -->
   <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
   <link href="../app.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -43,21 +42,6 @@
     <img id="homepagebanner" src="../Imgs/bgchatroulette.jpg" alt="Background">
   </header>
   <!-- Page Content -->
-  <div class="container-fluid text-center">
-    <div class="row content">
-      <div class="col-sm-8 text-left">
-        <div id="message-container">
-          <form id="send-container">
-            <input type="text" id="message-input">
-            <button type="submit" id="send-button">Send</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <button type="submit" id="send-button"><a href="rating.html">Next</a></button>
-  <br><br>
   <div class="container-fluid height-fill">
     <div class="row height-fill pos-middle">
       <div id="video_container" class="col-xs-2">
@@ -70,23 +54,14 @@
 
       <div id="user_container" class="col-xs-2 well height-fill">
       </div>
-
+      <br><br> <br><br> <br>
       <div id="button_container" class="col-xs-2">
-        <a class="btn btn-block btn-success" id="next_btn" title="Get a Random Stranger">
+        <a class="btn btn-block btn-success" id="next_btn" title="Get a Random Stranger" href="rating.html">
           <i class="fa fa-forward fa-3x"></i>
           <span class="shortcut">Next</span>
         </a>
-        <a class="btn btn-block btn-danger" id="stop_btn" title="Stop The Chat">
-          <i class="fa fa-stop fa-3x"></i>
-          <span class="shortcut">Stop</span>
-        </a>
-        <a class="btn btn-block btn-warning" id="clear_btn" title="Clear Chatbox">
-          <i class="fa fa-eraser fa-3x"></i>
-          <span class="shortcut">Clear</span>
-        </a>
       </div>
     </div>
-
     <div class="row pos-bottom">
       <div class="col-xs-7 col-xs-offset-2">
         <textarea id="message" rows="3" name="message"> </textarea>
@@ -101,14 +76,12 @@
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="../jquery/jquery-1.11.3.min.js"></script>
+  <script src="libs/jquery/jquery-1.11.3.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="../bootstrap/js/bootstrap.min.js"></script>
-
-  <script src="../node_module/socket.io/lib/socket.io.js"></script>
-  <script src="../node_module/easyrtc/api/easyrtc.js"></script>
-  <script src="../app.js"></script>
-
+  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/easyrtc/easyrtc.js"></script>
+  <script src="resources/js/app.js"></script>
 
 </body>
 
