--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -42,7 +42,7 @@
     <img id="homepagebanner" src="../Imgs/bgchatroulette.jpg" alt="Background">
   </header>
   <!-- Page Content -->
-  <div class="container-fluid height-fill">
+  <div class="container-fluid height-fill" style="margin: auto;">
     <div class="row height-fill pos-middle">
       <div id="video_container" class="col-xs-2">
         <video poster="../Imgs/cam.png" id="selfVideo"> </video>
@@ -74,14 +74,14 @@
       </div>
     </div>
   </div>
-
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="libs/jquery/jquery-1.11.3.min.js"></script>
+  <script src="../jquery/jquery-1.11.3.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/easyrtc/easyrtc.js"></script>
-  <script src="resources/js/app.js"></script>
+  <script src="../bootstrap/js/bootstrap.min.js"></script>
+
+  <script src="../node_module/socket.io/lib/socket.io.js"></script>
+  <script src="../node_module/easyrtc/api/easyrtc.js"></script>
+  <script src="..//app.js"></script>
 
 </body>
 
