added contact section to support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -54,6 +54,35 @@
     <div id="two">
       <div id="midleft">
         <p>CovidConnect Support Box</p>
+  <div style="text-align:center">
+    <h2>Contact Us</h2>
+    <p>Any issues or queries feel free to leave us a message:</p>
+  </div>
+  <div class="row">
+    <div class="column">
+      <img src="" style="width:100%">
+    </div>
+    <div class="column">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="country">Country</label>
+        <select id="country" name="country">
+          <option value="australia">Ireland</option>
+          <option value="canada">England</option>
+          <option value="canada">Scotland</option>
+          <option value="canada">Wales</option>
+          <option value="usa">Other</option>
+        </select>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+
       </div>
       <div id="midright">
         <div class="side">
@@ -61,13 +90,13 @@
           <li><a href="settings.html">Settings</a></li>
         </div>
         <div class="side">
-          <p>Your Account</p>
+          <p>About us</p>
         </div>
         <div class="side">
-          <p>Support Chat</p>
+          <p>Online Safety</p>
         </div>
         <div class="side">
-          <p>Safety</p>
+          <p>Privacy Policy</p>
         </div>
       </div>
     </div>
