testing indiv chat users

--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -30,11 +30,11 @@ Talk.ready.then(function() {
     <?php $user = $database.getUser(11); ?>
 var other = new Talk.User(
     <?php echo json_encode(array(
-        "id" => strval($user->idusers),
-        "name" => $user->username,
-        "email" => $user->Email,
-        "photoUrl" => $user->photoUrl,
-        "welcomeMessage" => "Hey, let's have a chat!"
+        "id" => strval($users->idusers),
+        "name" => $users->username,
+        "email" => $users->Email,
+        //"photoUrl" => $user->photoUrl,
+        //"welcomeMessage" => "Hey, let's have a chat!"
     )); ?>
 );
 /*
