Added Image to Support Page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -60,7 +60,7 @@
   </div>
   <div class="row">
     <div class="column">
-      <img src="" style="width:100%">
+      <img src="../Imgs/CovidConnectSupportImage.png" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
