--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -16,6 +16,11 @@
   <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="../app.css" rel="stylesheet">
+
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -41,7 +46,25 @@
   <header>
     <img id="homepagebanner" src="../Imgs/bgchatroulette.jpg" alt="Background">
   </header>
-  <!-- Page Content -->
+      <body>
+          <div class="container">
+     <br />
+
+     <h3 align="center">Chat Application using PHP Ajax Jquery</a></h3><br />
+     <br />
+
+     <div class="table-responsive">
+      <h4 align="center">Online User</h4>
+      <p align="right">Hi - <?php echo $_SESSION['username'];  ?> - <a href="logout.php">Logout</a></p>
+      <div id="user_details"></div>
+     </div>
+    </div>
+      </body>
+  </html>
+
+
+
+  <!-- Page Content>
   <div class="container-fluid height-fill" style="margin: auto;">
     <div class="row height-fill pos-middle">
       <div id="video_container" class="col-xs-2">
@@ -74,14 +97,35 @@
       </div>
     </div>
   </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins)
   <script src="../jquery/jquery-1.11.3.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <!-- Include all compiled plugins (below), or include individual files as needed
   <script src="../bootstrap/js/bootstrap.min.js"></script>
   <script src="../node_module/socket.io/lib/socket.io.js"></script>
   <script src="../node_module/easyrtc/api/easyrtc.js"></script>
   <script src="..//app.js"></script>
 
+-->
+
+
+<script>
+$(document).ready(function(){
+
+ fetch_user();
+
+ function fetch_user()
+ {
+  $.ajax({
+   url:"fetch_user.php",
+   method:"POST",
+   success:function(data){
+    $('#user_details').html(data);
+   }
+  })
+ }
+
+});
+</script>
 </body>
 
 </html>
