Beginning of preferences added to profile page

--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -51,11 +51,16 @@
         <h1>About You</h1>
         <p id="bio"></p>
       </div>
+      <div class="row content">
+          <div class="col-md-12">
+            <hr>
+            <h1> Prefences </h1>
+          </div>
+        </div>
+        <footer class="container-fluid text-center">
+          <p>Covid Connect Footer</p>
+        </footer>
 
-
-      <footer class="container-fluid text-center">
-        <p>Covid Connect Footer</p>
-      </footer>
 </body>
 
 </html>
