--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -37,7 +37,6 @@
   </header>
   <!-- Page Content -->
   <div class="container-fluid text-center">
-    <h1>Support Page</h1>
     <hr>
     <h2 onclick="displayText()"=> We're Here to Help!</h2>
     <div id="targetDiv"></div>
@@ -54,34 +53,34 @@
     <div id="two">
       <div id="midleft">
         <p>CovidConnect Support Box</p>
-  <div style="text-align:center">
-    <h2>Contact Us</h2>
-    <p>Any issues or queries feel free to leave us a message:</p>
-  </div>
-  <div class="row">
-    <div class="column">
-      <img src="../Imgs/CovidConnectSupportImage.png" style="width:100%">
-    </div>
-    <div class="column">
-      <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="country">Country</label>
-        <select id="country" name="country">
-          <option value="australia">Ireland</option>
-          <option value="canada">England</option>
-          <option value="canada">Scotland</option>
-          <option value="canada">Wales</option>
-          <option value="usa">Other</option>
-        </select>
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-  </div>
+        <div style="text-align:center">
+          <h2>Contact Us</h2>
+          <p>Any issues or queries feel free to leave us a message:</p>
+        </div>
+        <div class="row">
+          <div class="column">
+            <img src="../Imgs/CovidConnectSupportImage.png" style="width:100%">
+          </div>
+          <div class="column">
+            <form action="/action_page.php">
+              <label for="fname">First Name</label>
+              <input type="text" id="fname" name="firstname" placeholder="Your name.." style="width: 100%; margin-top: 6px; margin-bottom: 16px;">
+              <label for="lname">Last Name</label>
+              <input type="text" id="lname" name="lastname" placeholder="Your last name.."  style="width: 100%; margin-top: 6px; margin-bottom: 16px;">
+              <label for="country">Country</label>
+              <select id="country" name="country">
+                <option value="australia">Ireland</option>
+                <option value="canada">England</option>
+                <option value="canada">Scotland</option>
+                <option value="canada">Wales</option>
+                <option value="usa">Other</option>
+              </select>
+              <label for="subject">Subject</label>
+              <textarea id="subject" name="subject" placeholder="Write something.."  style="width: 100%; margin-top: 6px; margin-bottom: 16px;"></textarea>
+              <input type="submit" value="Submit">
+            </form>
+          </div>
+        </div>
 
       </div>
       <div id="midright">
