Style Changes to support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -93,6 +93,9 @@
         </div>
         <div class="side">
           <p>Online Safety</p>
+          <p>Remember to always be safe online, even in a controlled environment like Covid Connect users may seak information about you that you should always keep to youself!</p>
+          <p>Please read the link bellow to ensure you are being safe while using our site</p>
+          <button onclick="https://young.scot/get-informed/national/seven-tips-for-staying-safe-when-chatting-online">Click me</button>
         </div>
         <div class="side">
           <p>Privacy Policy</p>
