--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -65,14 +65,19 @@
       <div class="col-xs-7 col-xs-offset-2">
         <textarea id="message" rows="3" name="message"> </textarea>
       </div>
-      <div class="col-xs-1">
-        <a class="btn btn-block btn-success btn-large disabled" id="send_btn">
-          <i class="fa fa-envelope fa-2x"></i>
-          <span class="shortcut">(Enter)</span>
+      <div id="message_container" class="col-xs-2">
+        <a class="btn btn-success" id="send_btn">
+          <i class="fa fa-send fa-3x"></i>
+          <span class="shortcut" onclick="myFunction()">Send</span>
         </a>
       </div>
     </div>
   </div>
+  <script>
+  function myFunction() {
+  document.getElementById("message").value = text";
+}
+  </script>
 
   </body>
 
