Added Internet Safety link to support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -75,6 +75,8 @@
                 <option value="canada">Wales</option>
                 <option value="usa">Other</option>
               </select>
+              <br>
+              <br>
               <label for="subject">Subject</label>
               <textarea id="subject" name="subject" placeholder="Write something.."  style="width: 100%; margin-top: 6px; margin-bottom: 16px;"></textarea>
               <input type="submit" value="Submit">
@@ -95,7 +97,7 @@
           <p>Online Safety</p>
           <p>Remember to always be safe online, even in a controlled environment like Covid Connect users may seak information about you that you should always keep to youself!</p>
           <p>Please read the link bellow to ensure you are being safe while using our site</p>
-          <button onclick="https://young.scot/get-informed/national/seven-tips-for-staying-safe-when-chatting-online">Click me</button>
+          <a href="https://young.scot/get-informed/national/seven-tips-for-staying-safe-when-chatting-online">Click me!</a>
         </div>
         <div class="side">
           <p>Privacy Policy</p>
