--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -87,8 +87,9 @@
       </div>
       <div id="midright">
         <div class="side">
-          <p>Settings, Link to Settings Page</p>
+          <p>Link to Settings Page</p>
           <li><a href="settings.html">Settings</a></li>
+          <img src="../Imgs/SettingsCogCC.png" width="100" height="100" style="float:right">
         </div>
         <div class="side">
           <p>About us</p>
