--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -37,9 +37,12 @@
   </header>
   <!-- Page Content -->
   <div class="container-fluid text-center">
+
     <hr>
-    <h2 onclick="displayText()"=> We're Here to Help!</h2>
+
+    <h1= onclick="displayText()" class="pulsate" style="color:red" => We're Here to Help!</h1>
     <div id="targetDiv"></div>
+
     <script type="text/javascript">
       function displayText() {
         document.getElementById("targetDiv").innerHTML = "Browse Our Help Topics!";
