--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -54,9 +54,83 @@
       <div class="row content">
           <div class="col-md-12">
             <hr>
-            <h1> Prefences </h1>
+            <h1>My Prefences </h1>
+          </div>
+          <div class="col-sm-4">
+            <div id="Prep-Design">
+            <form action="/action_page.php">
+            <p>Please select your gender:</p>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label>
+
+            <br>
+
+            <p>Please select your age:</p>
+            <input type="radio" id="age1" name="age" value="30">
+            <label for="age1">0 - 30</label><br>
+            <input type="radio" id="age2" name="age" value="60">
+            <label for="age2">31 - 60</label><br>
+            <input type="radio" id="age3" name="age" value="100">
+            <label for="age3">61 - 100</label><br><br>
+            <input type="submit" value="Submit">
+            </form>
           </div>
         </div>
+
+        <div class="col-sm-4">
+          <div id="Prep-Design">
+          <form action="/action_page.php">
+          <p>Please select your gender:</p>
+          <input type="radio" id="male" name="gender" value="male">
+          <label for="male">Male</label><br>
+          <input type="radio" id="female" name="gender" value="female">
+          <label for="female">Female</label><br>
+          <input type="radio" id="other" name="gender" value="other">
+          <label for="other">Other</label>
+
+          <br>
+
+          <p>Please select your age:</p>
+          <input type="radio" id="age1" name="age" value="30">
+          <label for="age1">0 - 30</label><br>
+          <input type="radio" id="age2" name="age" value="60">
+          <label for="age2">31 - 60</label><br>
+          <input type="radio" id="age3" name="age" value="100">
+          <label for="age3">61 - 100</label><br><br>
+          <input type="submit" value="Submit">
+          </form>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div id="Prep-Design">
+        <form action="/action_page.php">
+        <p>Please select your gender:</p>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="male">Male</label><br>
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="female">Female</label><br>
+        <input type="radio" id="other" name="gender" value="other">
+        <label for="other">Other</label>
+
+        <br>
+
+        <p>Please select your age:</p>
+        <input type="radio" id="age1" name="age" value="30">
+        <label for="age1">0 - 30</label><br>
+        <input type="radio" id="age2" name="age" value="60">
+        <label for="age2">31 - 60</label><br>
+        <input type="radio" id="age3" name="age" value="100">
+        <label for="age3">61 - 100</label><br><br>
+        <input type="submit" value="Submit">
+        </form>
+      </div>
+    </div>
+
         <footer class="container-fluid text-center">
           <p>Covid Connect Footer</p>
         </footer>
