--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -71,18 +71,11 @@
         <div id="message_container" class="col-xs-2">
           <a class="btn btn-success" id="send_btn">
             <i class="fa fa-send fa-3x"></i>
-            <span class="shortcut" onclick="myFunction()">Send</span>
+            <span class="shortcut">Send</span>
           </a>
         </div>
       </div>
     </div>
-    <script>
-      function myFunction() {
-        document.getElementById("message").value = text ";
-      };
-      </div>
-    </script>
-
   </body>
 
 </html>
