--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -17,6 +17,11 @@
   <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="../app.css" rel="stylesheet">
+  <body onload="displayMessage()">
+  <body onload="onlineUsers()">
+    <body onload="onlineUsers()">
+
+
 </head>
 
 <body>
