--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -77,6 +77,7 @@
           <a class="btn btn-success" id="send_btn">
             <i class="fa fa-send fa-3x"></i>
             <span class="shortcut">Send</span>
+            <button onclick="updateMessage()" class="btn">Send</button>
           </a>
         </div>
       </div>
