--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -73,6 +73,8 @@
         <div class="col-xs-7 col-xs-offset-2">
           <textarea id="message" rows="3" name="message"> </textarea>
         </div>
+        <button onclick="updateMessage()" class="btn">Send</button>
+
         <div id="message_container" class="col-xs-2">
           <a class="btn btn-success" id="send_btn">
             <i class="fa fa-send fa-3x"></i>
