--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -54,7 +54,7 @@
       <div class="row content">
           <div class="col-md-12">
             <hr>
-            <h1>My Prefences </h1>
+            <h1> Prefences </h1>
           </div>
           <div class="col-sm-4">
             <div id="Prep-Design">
@@ -109,24 +109,46 @@
       <div class="col-sm-4">
         <div id="Prep-Design">
         <form action="/action_page.php">
-        <p>Please select your gender:</p>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label><br>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
-        <input type="radio" id="other" name="gender" value="other">
-        <label for="other">Other</label>
+        <p>Please select your Star Sign:</p>
+        <input type="checkbox" id="star1" name="star1" value="Capricorn">
+        <label for="star1">Capricorn</label><br>
 
+        <input type="checkbox" id="star2" name="star2" value="Aquarius">
+        <label for="star2">Aquarius</label><br>
+
+        <input type="checkbox" id="star3" name="star3" value="Pisces">
+        <label for="star3">Pisces</label><br>
+
+        <input type="checkbox" id="star4" name="star4" value="Aries">
+        <label for="star4">Aries</label><br>
+
+        <input type="checkbox" id="star5" name="star5" value="Tauras">
+        <label for="star5">Taurus</label><br>
+
+        <input type="checkbox" id="star6" name="star6" value="Gemini">
+        <label for="star6">Gemini</label><br>
+
+        <input type="checkbox" id="star7" name="star7" value="Cancer">
+        <label for="star7">Cancer</label><br>
+
+        <input type="checkbox" id="star8" name="star8" value="Leo">
+        <label for="star8">Leo</label><br>
+
+        <input type="checkbox" id="star9" name="star9" value="Virgo">
+        <label for="star9">Virgo</label><br>
+
+        <input type="checkbox" id="star10" name="star10" value="Libra">
+        <label for="star10">Libra</label><br>
+
+        <input type="checkbox" id="star11" name="star11" value="Scorpio">
+        <label for="star11">Scorpio</label><br>
+
+        <input type="checkbox" id="star12" name="star12" value="Ophiuchus">
+        <label for="star11">Ophiuchus</label><br>
+
+        <input type="checkbox" id="star13" name="star13" value="Sagittarius">
+        <label for="star13">Sagittarius</label><br>
         <br>
-
-        <p>Please select your age:</p>
-        <input type="radio" id="age1" name="age" value="30">
-        <label for="age1">0 - 30</label><br>
-        <input type="radio" id="age2" name="age" value="60">
-        <label for="age2">31 - 60</label><br>
-        <input type="radio" id="age3" name="age" value="100">
-        <label for="age3">61 - 100</label><br><br>
-        <input type="submit" value="Submit">
         </form>
       </div>
     </div>
