--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -60,23 +60,22 @@
             <div id="Prep-Design">
             <form action="/action_page.php">
             <p>Please select your gender:</p>
-            <input type="radio" id="male" name="gender" value="male">
+            <input type="checkbox" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
-            <input type="radio" id="female" name="gender" value="female">
+            <input type="checkbox" id="female" name="gender" value="female">
             <label for="female">Female</label><br>
-            <input type="radio" id="other" name="gender" value="other">
+            <input type="checkbox" id="other" name="gender" value="other">
             <label for="other">Other</label>
 
             <br>
 
             <p>Please select your age:</p>
-            <input type="radio" id="age1" name="age" value="30">
+            <input type="checkbox" id="age1" name="age" value="30">
             <label for="age1">0 - 30</label><br>
-            <input type="radio" id="age2" name="age" value="60">
+            <input type="checkbox" id="age2" name="age" value="60">
             <label for="age2">31 - 60</label><br>
-            <input type="radio" id="age3" name="age" value="100">
+            <input type="checkbox" id="age3" name="age" value="100">
             <label for="age3">61 - 100</label><br><br>
-            <input type="submit" value="Submit">
             </form>
           </div>
         </div>
@@ -84,24 +83,39 @@
         <div class="col-sm-4">
           <div id="Prep-Design">
           <form action="/action_page.php">
-          <p>Please select your gender:</p>
-          <input type="radio" id="male" name="gender" value="male">
-          <label for="male">Male</label><br>
-          <input type="radio" id="female" name="gender" value="female">
-          <label for="female">Female</label><br>
-          <input type="radio" id="other" name="gender" value="other">
-          <label for="other">Other</label>
+          <p>What Colour are you feeling today</p>
+          <input type="checkbox" id="Blue" name="Blue" value="Blue">
+          <label for="star1">Blue - Sad</label><br>
+
+          <input type="checkbox" id="Green" name="Green" value="Green">
+          <label for="star1">Green - Fresh</label><br>
+
+          <input type="checkbox" id="Yellow" name="Yellow" value="Yellow">
+          <label for="star1">Yellow - Happy</label><br>
+
+          <input type="checkbox" id="Purple" name="Purple" value="Purple">
+          <label for="star1">Purple - Loyal</label><br>
+
+          <input type="checkbox" id="Red" name="Red" value="Red">
+          <label for="star1">Red - Loved </label><br>
+
+          <input type="checkbox" id="Pink" name="Pink" value="Pink">
+          <label for="star1">Pink - Caring</label><br>
+
+          <input type="checkbox" id="Orange" name="Orange" value="Orange">
+          <label for="star1">Orange - confidence</label><br>
 
           <br>
 
-          <p>Please select your age:</p>
-          <input type="radio" id="age1" name="age" value="30">
-          <label for="age1">0 - 25</label><br>
-          <input type="radio" id="age2" name="age" value="60">
-          <label for="age2">31 - 60</label><br>
-          <input type="radio" id="age3" name="age" value="100">
-          <label for="age3">61 - 100</label><br><br>
-          <input type="submit" value="Submit">
+          <p>How Active will you be today:</p>
+          <input type="checkbox" id="Very" name="very" value="very">
+          <label for="very">Extremely active</label><br>
+
+          <input type="checkbox" id="little" name="little" value="little">
+          <label for="very">A little active</label><br>
+
+          <input type="Checkbox" id="Lazy" name="Lazy" value="Lazy">
+          <label for="Lazy">Lazy-day today</label><br><br>
           </form>
         </div>
       </div>
@@ -152,6 +166,7 @@
         </form>
       </div>
     </div>
+
 
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
