Meet the team , Support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -95,7 +95,8 @@
           <img src="../Imgs/SettingsCogCC.png" width="100" height="100" style="float:right">
         </div>
         <div class="side">
-          <p>About us</p>
+          <p>Meet the team !</p>
+          <p>We are 5 students studying computing in the National College Ireland (NCI), we all beleive and understand the issue of loneliness as a result of the COVID-19 pandemic we hope our application can grant the opportunity for users to connect and communicate in a safe environment. </p>
         </div>
         <div class="side">
           <p>Online Safety</p>
