--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -96,6 +96,7 @@
         </div>
         <div class="side">
           <p>Meet the team !</p>
+          <p>Tegan, Luke, Oisin, Sean and Emanuel</p>
           <p>We are 5 students studying computing in the National College Ireland (NCI), we all beleive and understand the issue of loneliness as a result of the COVID-19 pandemic we hope our application can grant the opportunity for users to connect and communicate in a safe environment. </p>
         </div>
         <div class="side">
