--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -65,7 +65,7 @@
             <img src="../Imgs/CovidConnectSupportImage.png" style="width:100%">
           </div>
           <div class="column">
-            <form action="/action_page.php">
+            <form action="mailto:covidconnect@hotmail.com">
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="firstname" placeholder="Your name.." style="width: 100%; margin-top: 6px; margin-bottom: 16px;">
               <label for="lname">Last Name</label>
